app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo-containter
        image: tutum/hello-world
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo-service
  namespace: default
spec:
  type: NodePort
  ports:
  - name: webport
    port: 80
    targetPort: 80
  selector:
    app: demo
