app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sourav-ingress
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sourav.alacritysys.com 
    secretName: sourav-alacritysys-com 
  rules:
  - host: sourav.alacritysys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo-service # Should be a valid service
            port: 
                number: 80 # this should be a valid port of the service
